--- a/account.html
+++ b/account.html
@@ -22,6 +22,7 @@
     <!-- App Css-->
     <!-- <link href="assets/css/app.min.css" rel="stylesheet" type="text/css"> -->
     <link href="assets/css/appAR.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
     <!-- custom Css-->
     <link href="assets/css/custom.min.css" rel="stylesheet" type="text/css">
 </head>
@@ -866,12 +867,12 @@
                             <section id="chat">
                                 <div class="container p-0">
                                     <div class="row">
-                                        <div class="col-lg-4 p-1">
+                                        <div class="col-lg-4">
                                             <button class="defaultBtn UsersControl d-lg-none">
                                                 <i class="fas fa-comments-alt mx-1"></i> المحادثات <span></span>
                                             </button>
                                             <!-- chat users -->
-                                            <div class=" Users ">
+                                            <div class=" Users">
                                                 <div class="UsersHeder">
                                                     <h5> المحادثات </h5>
                                                     <span class="closeUsers"> <i class="fal fa-times"></i> </span>
@@ -908,7 +909,7 @@
                                                 </ul>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8 p-1">
+                                        <div class="col-lg-8">
                                             <div class="tab-content p-0">
                                                 <div class="tab-pane fade show active" id="chat1"
                                                     aria-labelledby="chat1-tab">
@@ -1219,23 +1220,45 @@
         </div>
     </div>
     <!-- social media -->
-    <div class="social-media">
-        <ul>
-            <li>
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            </li>
-
-            <li>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
-            </li>
-        </ul>
-    </div>
+    <section class="floatBtns">
+        <a class="main">
+            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                xmlns:svgjs="http://svgjs.com/svgjs" width="24" height="24" x="0" y="0" viewBox="0 0 512 512"
+                style="enable-background:new 0 0 512 512" xml:space="preserve">
+                <g>
+                    <g data-name="Layer 16">
+                        <circle cx="256" cy="256" r="70.71" fill="#4b93ff" data-original="#000000"></circle>
+                        <path
+                            d="M442.78 282.43a48.59 48.59 0 0 0-15.7 11.66l-73.25-24.9a98.1 98.1 0 0 1-12.25 36l73.28 24.91a48.63 48.63 0 1 0 27.92-47.64zM69.22 131.78c.75-.35 1.49-.72 2.21-1.1l97.4 79a99.34 99.34 0 0 1 24-29.48l-97.47-79.04a48.61 48.61 0 1 0-26.14 30.62zM322.23 394.23l-17.52-52.4a97.91 97.91 0 0 1-36 12.07l17.5 52.37c-1 .74-1.92 1.5-2.85 2.3a58.93 58.93 0 1 0 38.9-14.34zM337.91 201l90.67-90.67a58 58 0 1 0-26.87-26.87L311 174.09A99.57 99.57 0 0 1 337.91 201zM174.18 311.17l-99.77 100.1a53 53 0 1 0 26.91 26.83L201.1 338a99.6 99.6 0 0 1-26.92-26.83z"
+                            fill="#4b93ff" data-original="#000000"></path>
+                    </g>
+                </g>
+            </svg>
+        </a>
+        <div class="subs">
+            <!-- sub -->
+            <a href="https://vimeo.com/worldedgeproductions" target="_blank"> <i class="fa-brands fa-vimeo"></i> </a>
+            <!-- sub -->
+            <a href="https://www.linkedin.com/company/world-edge-productions/" target="_blank"> <i
+                    class="fa-brands fa-linkedin-in"></i> </a>
+            <!-- sub -->
+            <a href="https://instagram.com/worldedgeproductions?igshid=YmMyMTA2M2Y=" target="_blank"> <i
+                    class="fa-brands fa-instagram"></i> </a>
+            <!-- sub -->
+            <a href="https://twitter.com/worldedge_me?s=21&t=-Y9Zr8icvkKp4zClNrj0Mw" target="_blank"> <i
+                    class="fa-brands fa-twitter"></i> </a>
+            <!-- sub -->
+            <a href="https://www.tiktok.com/@worldedgeproductions?_t=8bSLiAvUglN&_r=1" target="_blank"> <i
+                    class="fa-brands fa-tiktok"></i> </a>
+            <!-- sub -->
+            <a href="https://www.youtube.com/@worldedgeproductions" target="_blank"> <i
+                    class="fa-brands fa-youtube"></i>
+            </a>
+            <!-- sub -->
+            <a href="https://www.google.com/maps/place/%D8%A7%D9%84%D8%AD%D9%85%D8%B1%D8%A7%D8%A1%D8%8C+%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6+%D8%A7%D9%84%D8%B3%D8%B9%D9%88%D8%AF%D9%8A%D8%A9%E2%80%AD/@24.7756012,46.7886021,13z/data=!3m1!4b1!4m6!3m5!1s0x3e2efe03c5c74059:0x32577608b4d6e9d2!8m2!3d24.778346!4d46.7614326!16s%2Fg%2F11c6d_glhh"
+                target="_blank"> <i class="fa-sharp fa-solid fa-location-dot"></i> </a> </span>
+        </div>
+    </section>
     <!-- footer -->
     <section class="section footer-landing pb-0">
         <div class="container">
@@ -1321,6 +1344,39 @@
     <script src="assets/js/menu.init.js"></script>
     <script src="assets/js/jquery.fancybox.min.js"></script>
     <script src="assets/js/custom.js"></script>
+    <script>
+        document.getElementById("chat-submit").addEventListener("click", (e) => {
+            e.preventDefault();
+            let msg = document.getElementById("chat-input").value;
+            if (msg.trim() == '') {
+                return false;
+            } generate_message(msg, 'self');
+        })
+        function generate_message(msg, type) {
+            var str = `
+            <div class="userSend">
+                <div class="sendMassage">
+                    <p> ${msg} </p>
+                    <div class=" time">
+                    <span> 29 / 4 / 2022 </span>
+                </div>
+                </div>
+            </div>
+            `;
+            document.querySelector(".chatBody").append(str);
+            if (type == 'self') {
+                document.querySelector("#chat-input").value = "";
+            }
+        }
+        document.querySelector(".UsersControl").addEventListener("click", () => {
+            document.querySelector(".Users").classList.remove("hideUsers");
+            document.querySelector(".Users").classList.add("showUsers");
+        })
+        document.querySelector(".closeUsers").addEventListener("click", () => {
+            document.querySelector(".Users").classList.remove("showUsers");
+            document.querySelector(".Users").classList.add("hideUsers");
+        })
+    </script>
 </body>
 
 </html>
