--- a/index.html
+++ b/index.html
@@ -355,124 +355,113 @@
                             <!-- slide -->
                             <div class="swiper-slide">
                                 <a href="cv-details.html" class="cv">
-                                    <div class="img">
-                                        <img src="assets/images/workers/1.jpg" alt="">
-                                    </div>
-                                    <div class="mainInfo">
-                                        <h4>خديجه مجدى</h4>
-                                        <div class="age"> <span> 24</span> سنة </div>
-                                    </div>
-                                    <div class="subInfo">
-                                        <div class="sub">
-                                            <p> الجنسية </p>
-                                            <h6> سودانيه </h6>
-                                        </div>
-                                        <div class="sub">
-                                            <p> المهنة </p>
-                                            <h6> عامله منزليه </h6>
-                                        </div>
-                                        <div class="sub">
-                                            <p> الديانة </p>
-                                            <h6> مسلم </h6>
-                                        </div>
-                                        <div class="sub">
-                                            <p> الحالة الاجتماعية </p>
-                                            <h6> عزباء </h6>
+                                    <div class="imgall">
+                                        <img src="assets/images/workers/cv.png" alt="">
+                                        <div class="buttons">
+                                            <ul>
+                                                <li>
+                                                    <button>
+                                                        <i class="fa-sharp fa-regular fa-heart"></i>
+                                                    </button>
+                                                </li>
+                                                <li>
+                                                    <button>
+                                                        <i class="fa-sharp fa-solid fa-share"></i>
+                                                    </button>
+                                                </li>
+                                                <li>
+                                                    <button>
+                                                        <i class="fa-sharp fa-light fa-download"></i>
+                                                    </button>
+                                                </li>
+                                            </ul>
                                         </div>
                                     </div>
-                                    <span class="more btn "> عرض التفاصيل </span>
+                                    <span class="more btn mt-4"> عرض التفاصيل </span>
                                 </a>
                             </div>
                             <!-- slide -->
                             <div class="swiper-slide">
                                 <a href="cv-details.html" class="cv">
-                                    <div class="img">
-                                        <img src="assets/images/workers/2.jpg" alt="">
+                                    <div class="imgall">
+                                        <img src="assets/images/workers/cv.png" alt="">
+                                        <div class="buttons">
+                                            <ul>
+                                                <li>
+                                                    <button>
+                                                        <i class="fa-sharp fa-regular fa-heart"></i>
+                                                    </button>
+                                                </li>
+                                                <li>
+                                                    <button>
+                                                        <i class="fa-sharp fa-solid fa-share"></i>
+                                                    </button>
+                                                </li>
+                                                <li>
+                                                    <button>
+                                                        <i class="fa-sharp fa-light fa-download"></i>
+                                                    </button>
+                                                </li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                    <div class="mainInfo">
-                                        <h4>عائشة محمد صالح</h4>
-                                        <div class="age"><span>28</span> سنة</div>
-                                    </div>
-                                    <div class="subInfo">
-                                        <div class="sub">
-                                            <p>الجنسية</p>
-                                            <h6>نيجيريه</h6>
-                                        </div>
-                                        <div class="sub">
-                                            <p>المهنة</p>
-                                            <h6>طباخه</h6>
-                                        </div>
-                                        <div class="sub">
-                                            <p>الديانة</p>
-                                            <h6>مسلمة</h6>
-                                        </div>
-                                        <div class="sub">
-                                            <p>الحالة الاجتماعية</p>
-                                            <h6>متزوجة</h6>
-                                        </div>
-                                    </div> <span class="more btn ">عرض التفاصيل</span>
+                                    <span class="more btn mt-4"> عرض التفاصيل </span>
                                 </a>
                             </div>
                             <!-- slide -->
                             <div class="swiper-slide">
                                 <a href="cv-details.html" class="cv">
-                                    <div class="img">
-                                        <img src="assets/images/workers/3.jpg" alt="">
-                                    </div>
-                                    <div class="mainInfo">
-                                        <h4>تحيه على الحمدون</h4>
-                                        <div class="age"><span>32</span> سنة</div>
-                                    </div>
-                                    <div class="subInfo">
-                                        <div class="sub">
-                                            <p>الجنسية</p>
-                                            <h6>هنديه</h6>
-                                        </div>
-                                        <div class="sub">
-                                            <p>المهنة</p>
-                                            <h6>مربيه اطفال</h6>
-                                        </div>
-                                        <div class="sub">
-                                            <p>الديانة</p>
-                                            <h6>مسلم</h6>
-                                        </div>
-                                        <div class="sub">
-                                            <p>الحالة الاجتماعية</p>
-                                            <h6>متزوج</h6>
+                                    <div class="imgall">
+                                        <img src="assets/images/workers/cv.png" alt="">
+                                        <div class="buttons">
+                                            <ul>
+                                                <li>
+                                                    <button>
+                                                        <i class="fa-sharp fa-regular fa-heart"></i>
+                                                    </button>
+                                                </li>
+                                                <li>
+                                                    <button>
+                                                        <i class="fa-sharp fa-solid fa-share"></i>
+                                                    </button>
+                                                </li>
+                                                <li>
+                                                    <button>
+                                                        <i class="fa-sharp fa-light fa-download"></i>
+                                                    </button>
+                                                </li>
+                                            </ul>
                                         </div>
                                     </div>
-                                    <span class="more btn ">عرض التفاصيل</span>
+                                    <span class="more btn mt-4"> عرض التفاصيل </span>
                                 </a>
                             </div>
                             <!-- slide -->
                             <div class="swiper-slide">
                                 <a href="cv-details.html" class="cv">
-                                    <div class="img">
-                                        <img src="assets/images/workers/4.jpg" alt="">
-                                    </div>
-                                    <div class="mainInfo">
-                                        <h4>نورة سعد الدين</h4>
-                                        <div class="age"><span>26</span> سنة</div>
-                                    </div>
-                                    <div class="subInfo">
-                                        <div class="sub">
-                                            <p>الجنسية</p>
-                                            <h6>مصرية</h6>
-                                        </div>
-                                        <div class="sub">
-                                            <p>المهنة</p>
-                                            <h6>عامله منزليه</h6>
-                                        </div>
-                                        <div class="sub">
-                                            <p>الديانة</p>
-                                            <h6>مسلمة</h6>
-                                        </div>
-                                        <div class="sub">
-                                            <p>الحالة الاجتماعية</p>
-                                            <h6>أعزبة</h6>
+                                    <div class="imgall">
+                                        <img src="assets/images/workers/cv.png" alt="">
+                                        <div class="buttons">
+                                            <ul>
+                                                <li>
+                                                    <button>
+                                                        <i class="fa-sharp fa-regular fa-heart"></i>
+                                                    </button>
+                                                </li>
+                                                <li>
+                                                    <button>
+                                                        <i class="fa-sharp fa-solid fa-share"></i>
+                                                    </button>
+                                                </li>
+                                                <li>
+                                                    <button>
+                                                        <i class="fa-sharp fa-light fa-download"></i>
+                                                    </button>
+                                                </li>
+                                            </ul>
                                         </div>
                                     </div>
-                                    <span class="more btn ">عرض التفاصيل</span>
+                                    <span class="more btn mt-4"> عرض التفاصيل </span>
                                 </a>
                             </div>
                         </div>
@@ -830,6 +819,61 @@
                     </div>
                     <h5>7.ضمان 3 شهور</h5>
                     <p>نضمن لك العمالة لمدة 3 شهور</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section Recruitment-references">
+        <div class="container">
+            <h4 class="text-center mb-5">مراجع الاستقدام</h4>
+            <div class="row justify-content-around">
+                <div class="col-lg-6 col-12 d-flex align-items-center flex-column justify-content-center">
+                    <h5>الدخول الى منصة مساند</h5>
+                    <ul>
+                        <li>
+                            <div class="icon">
+                                <i class="fa-sharp fa-solid fa-passport"></i>
+                            </div>
+                            <span> التأشيرة </span>
+                        </li>
+                        <li>
+                            <div class="icon">
+                                <i class="fa-solid fa-badge-check"></i>
+                            </div>
+                            <span> التحقق من تأهيلك للحصول على التأشيرة </span>
+                        </li>
+                        <li>
+                            <div class="icon">
+                                <i class="fa-sharp fa-solid fa-files"></i>
+                            </div>
+                            <span> اختيار السيرة الذاتية </span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-6 col-12 d-flex align-items-center flex-column justify-content-center">
+                    <h5>الإقرار بالمعلومات الصحيحة وسداد الرسوم</h5>
+                    <ul>
+                        <li>
+                            <div class="icon">
+                                <i class="fa-sharp fa-solid fa-passport"></i>
+                            </div>
+                            <span> تعاقد الاستقدام عبر مساند وسداد الرسوم </span>
+                        </li>
+                        <li>
+                            <div class="icon">
+                                <i class="fa-solid fa-badge-check"></i>
+                            </div>
+                            <span>
+                                الإقرار بالمعلومات الصحيحة وسداد الرسوم </span>
+                        </li>
+                        <li>
+                            <div class="icon">
+                                <i class="fa-sharp fa-solid fa-files"></i>
+                            </div>
+                            <span>
+                                الإقرار بالمعلومات الصحيحة وسداد الرسوم </span>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -1289,22 +1333,46 @@
         </div>
     </section>
     <!-- social media -->
-    <div class="social-media">
-        <ul>
-            <li>
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
-            </li>
-        </ul>
-    </div>
+    <!-- float -->
+    <section class="floatBtns">
+        <a class="main">
+            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                xmlns:svgjs="http://svgjs.com/svgjs" width="24" height="24" x="0" y="0" viewBox="0 0 512 512"
+                style="enable-background:new 0 0 512 512" xml:space="preserve">
+                <g>
+                    <g data-name="Layer 16">
+                        <circle cx="256" cy="256" r="70.71" fill="#4b93ff" data-original="#000000"></circle>
+                        <path
+                            d="M442.78 282.43a48.59 48.59 0 0 0-15.7 11.66l-73.25-24.9a98.1 98.1 0 0 1-12.25 36l73.28 24.91a48.63 48.63 0 1 0 27.92-47.64zM69.22 131.78c.75-.35 1.49-.72 2.21-1.1l97.4 79a99.34 99.34 0 0 1 24-29.48l-97.47-79.04a48.61 48.61 0 1 0-26.14 30.62zM322.23 394.23l-17.52-52.4a97.91 97.91 0 0 1-36 12.07l17.5 52.37c-1 .74-1.92 1.5-2.85 2.3a58.93 58.93 0 1 0 38.9-14.34zM337.91 201l90.67-90.67a58 58 0 1 0-26.87-26.87L311 174.09A99.57 99.57 0 0 1 337.91 201zM174.18 311.17l-99.77 100.1a53 53 0 1 0 26.91 26.83L201.1 338a99.6 99.6 0 0 1-26.92-26.83z"
+                            fill="#4b93ff" data-original="#000000"></path>
+                    </g>
+                </g>
+            </svg>
+        </a>
+        <div class="subs">
+            <!-- sub -->
+            <a href="https://vimeo.com/worldedgeproductions" target="_blank"> <i class="fa-brands fa-vimeo"></i> </a>
+            <!-- sub -->
+            <a href="https://www.linkedin.com/company/world-edge-productions/" target="_blank"> <i
+                    class="fa-brands fa-linkedin-in"></i> </a>
+            <!-- sub -->
+            <a href="https://instagram.com/worldedgeproductions?igshid=YmMyMTA2M2Y=" target="_blank"> <i
+                    class="fa-brands fa-instagram"></i> </a>
+            <!-- sub -->
+            <a href="https://twitter.com/worldedge_me?s=21&t=-Y9Zr8icvkKp4zClNrj0Mw" target="_blank"> <i
+                    class="fa-brands fa-twitter"></i> </a>
+            <!-- sub -->
+            <a href="https://www.tiktok.com/@worldedgeproductions?_t=8bSLiAvUglN&_r=1" target="_blank"> <i
+                    class="fa-brands fa-tiktok"></i> </a>
+            <!-- sub -->
+            <a href="https://www.youtube.com/@worldedgeproductions" target="_blank"> <i
+                    class="fa-brands fa-youtube"></i>
+            </a>
+            <!-- sub -->
+            <a href="https://www.google.com/maps/place/%D8%A7%D9%84%D8%AD%D9%85%D8%B1%D8%A7%D8%A1%D8%8C+%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6+%D8%A7%D9%84%D8%B3%D8%B9%D9%88%D8%AF%D9%8A%D8%A9%E2%80%AD/@24.7756012,46.7886021,13z/data=!3m1!4b1!4m6!3m5!1s0x3e2efe03c5c74059:0x32577608b4d6e9d2!8m2!3d24.778346!4d46.7614326!16s%2Fg%2F11c6d_glhh"
+                target="_blank"> <i class="fa-sharp fa-solid fa-location-dot"></i> </a> </span>
+        </div>
+    </section>
     <!-- JAVASCRIPT -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/simplebar.min.js"></script>
